--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
 	// Uncomment the next line to have VS Code connect as an existing non-root user in the container. 
 	// On Linux, by default, the container user's UID/GID will be updated to match your local user. See
 	// https://aka.ms/vscode-remote/containers/non-root for details on adding a non-root user if none exist.
-	// "remoteUser": "abhijeet",
+	"remoteUser": "vscode",
 	// "containerUser": "abhijeet",
 
 	// Uncomment the next line if you will use a ptrace-based debugger like C++, Go, and Rust
