--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,5 +48,8 @@
 	// "postCreateCommand": "",
 
 	// Add the IDs of extensions you want installed when the container is created in the array below.
-	"extensions": []
+	"extensions": [
+		"ms-python.python",
+		"tomoki1207.pdf"
+	]
 }
