--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,7 @@
 	email = abhmul@gmail.com
 	name = jetm
 [alias]
+	s = status
 	a = !git add -A
 	u = !git add -u
 	c = !git commit -m
@@ -9,8 +10,8 @@
 	uc = !git u && git c
 	p = !git push -u origin HEAD
 	pu = !git stash && git pull -r && git stash pop
-	acp = "! f() { git pu && git ac $1 && git p; } ; f"
-	ucp = "! f() { git pu && git uc $1 && git p; } ; f"
+	acp = "! f() { git pu && git ac '$1' && git p; } ; f"
+	ucp = "! f() { git pu && git uc '$1' && git p; } ; f"
 
 
 
