added more shorthand and did 2 section 2.3 problems

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -54,6 +54,7 @@
 		"goessner.mdmath",
 		"davidanson.vscode-markdownlint",
 		"shd101wyy.markdown-preview-enhanced",
-		"yzhang.markdown-all-in-one"
+		"yzhang.markdown-all-in-one",
+		"yzane.markdown-pdf"
 	]
 }
