--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,12 @@
 	acp = "! f() { git ac \"$1\" && git p; } ; f"
 	ucp = "! f() { git uc \"$1\" && git p; } ; f"
 	up = "! f() { git ac \"$1\" && git frp; } ; f"
+[pull]
+	ff = only
 
 
-
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
