--- a/.devcontainer/devcontainer.desktop.json
+++ b/.devcontainer/devcontainer.desktop.json
@@ -13,6 +13,7 @@
   // On Linux, by default, the container user's UID/GID will be updated to match your local user. See
   // https://aka.ms/vscode-remote/containers/non-root for details on adding a non-root user if none exist.
   "remoteUser": "vscode",
+  // "containerUser": "abhijeet",
 
   // Uncomment the next line if you will use a ptrace-based debugger like C++, Go, and Rust
   // "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
@@ -22,7 +23,10 @@
     "1000:1000" // idk how to run $(id -u) here
   ],
 
-  "mounts": ["source=/home/abhmul/dev/,target=/workspaces/dev,type=bind"],
+  "mounts": [
+    "source=/media/abhijeet/Data/,target=/data,type=bind",
+    "source=/home/abhijeet/dev/,target=/workspaces/dev,type=bind"
+  ],
 
   // Use 'settings' to set *default* container specific settings.json values on container create.
   // You can edit these settings after create using File > Preferences > Settings > Remote.
