--- a/environment.yml
+++ b/environment.yml
@@ -5,22 +5,59 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _tflow_select=2.1.0=gpu
   - appdirs=1.4.3=py_1
+  - argon2-cffi=20.1.0=py37h7b6447c_1
+  - astunparse=1.6.3=py_0
+  - async_generator=1.10=py37h28b3542_0
   - attrs=20.1.0=pyh9f0ad1d_0
+  - backcall=0.2.0=py_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.1=py_0
-  - black=20.8b1=py_0
-  - ca-certificates=2020.7.22=0
+  - black=19.10b0=py_0
+  - bleach=3.2.1=py_0
+  - blinker=1.4=py37_0
+  - brotlipy=0.7.0=py37h7b6447c_1000
+  - c-ares=1.16.1=h7b6447c_0
+  - ca-certificates=2020.10.14=0
+  - cachetools=4.1.1=py_0
   - certifi=2020.6.20=py37_0
+  - cffi=1.14.3=py37he30daa8_0
+  - chardet=3.0.4=py37_1003
   - click=7.1.2=pyh9f0ad1d_0
   - coconut=1.4.3=py37hc8dfbb8_1
+  - cryptography=3.1.1=py37h1ba5d50_0
+  - cudatoolkit=10.1.243=h6bb024c_0
+  - cudnn=7.6.5=cuda10.1_0
+  - cupti=10.1.168=0
   - cycler=0.10.0=py_2
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py37_0
   - flake8=3.8.3=py_1
   - freetype=2.10.2=he06d7ca_0
+  - gast=0.3.3=py_0
+  - google-auth=1.22.1=py_0
+  - google-auth-oauthlib=0.4.1=py_2
+  - google-pasta=0.2.0=py_0
+  - grpcio=1.31.0=py37hf8bcb03_0
+  - h5py=2.10.0=py37hd6299e0_1
+  - hdf5=1.10.6=hb1b8bf9_0
+  - idna=2.10=py_0
   - importlib-metadata=1.7.0=py37hc8dfbb8_0
+  - importlib_metadata=1.7.0=0
+  - ipykernel=5.3.4=py37h5ca1d4c_0
+  - ipython=7.18.1=py37h5ca1d4c_0
+  - ipython_genutils=0.2.0=py37_0
   - jedi=0.17.2=py37hc8dfbb8_0
+  - jinja2=2.11.2=py_0
   - joblib=0.16.0=py_0
   - jpeg=9d=h516909a_0
+  - jsonschema=3.2.0=py37_1
+  - jupyter_client=6.1.7=py_0
+  - jupyter_core=4.6.3=py37_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - keras-preprocessing=1.1.0=py_1
   - kiwisolver=1.2.0=py37h99015e2_0
   - lcms2=2.11=hbd6801e_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
@@ -33,52 +70,97 @@ dependencies:
   - liblapack=3.8.0=17_openblas
   - libopenblas=0.3.10=pthreads_hb3c22a3_4
   - libpng=1.6.37=hed695b0_2
+  - libprotobuf=3.13.0.1=hd408876_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=hc7e4089_6
   - libwebp-base=1.1.0=h516909a_3
   - lz4-c=1.9.2=he1b5a44_3
+  - markdown=3.3.2=py37_0
+  - markupsafe=1.1.1=py37h14c3975_1
   - matplotlib=3.3.1=1
   - matplotlib-base=3.3.1=py37hd478181_1
   - mccabe=0.6.1=py_1
+  - mistune=0.8.4=py37h14c3975_1001
+  - multidict=4.7.6=py37h7b6447c_1
   - mypy_extensions=0.4.3=py37hc8dfbb8_1
+  - nbclient=0.5.0=py_0
+  - nbconvert=6.0.7=py37_0
+  - nbformat=5.0.7=py_0
   - ncurses=6.2=he6710b0_1
+  - nest-asyncio=1.4.1=py_0
+  - notebook=6.1.4=py37_0
   - numpy=1.19.1=py37h7ea13bd_2
+  - oauthlib=3.1.0=py_0
   - olefile=0.46=py_0
-  - openssl=1.1.1g=h516909a_1
+  - openssl=1.1.1h=h7b6447c_0
+  - opt_einsum=3.1.0=py_0
+  - packaging=20.4=py_0
   - pandas=1.1.1=py37h3340039_0
+  - pandoc=2.10.1=0
+  - pandocfilters=1.4.2=py37_1
   - parso=0.7.1=pyh9f0ad1d_0
   - pathspec=0.8.0=pyh9f0ad1d_0
+  - pexpect=4.8.0=py37_1
+  - pickleshare=0.7.5=py37_1001
   - pillow=7.2.0=py37h718be6c_1
   - pip=20.2.2=py37_0
   - plotly=4.9.0=py_0
+  - prometheus_client=0.8.0=py_0
   - prompt-toolkit=3.0.7=py_0
   - prompt_toolkit=3.0.7=0
+  - ptyprocess=0.6.0=py37_0
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.8=py_0
   - pycodestyle=2.6.0=pyh9f0ad1d_0
+  - pycparser=2.20=py_2
   - pyflakes=2.2.0=pyh9f0ad1d_0
   - pygments=2.6.1=py_0
+  - pyjwt=1.7.1=py37_0
+  - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.5=py_0
+  - pyrsistent=0.17.3=py37h7b6447c_0
+  - pysocks=1.7.1=py37_1
   - python=3.7.9=h7579374_0
   - python-dateutil=2.8.1=py_0
   - python_abi=3.7=1_cp37m
   - pytz=2020.1=pyh9f0ad1d_0
+  - pyzmq=19.0.2=py37he6710b0_1
   - readline=8.0=h7b6447c_0
   - regex=2020.7.14=py37h8f50634_0
+  - requests=2.24.0=py_0
+  - requests-oauthlib=1.3.0=py_0
   - retrying=1.3.3=py37_2
   - rope=0.17.0=pyh9f0ad1d_0
+  - rsa=4.6=py_0
   - scikit-learn=0.23.2=py37h6785257_0
   - scipy=1.5.2=py37hb14ef9d_0
+  - send2trash=1.5.0=py37_0
   - setuptools=49.6.0=py37_0
   - six=1.15.0=pyh9f0ad1d_0
   - sqlite=3.33.0=h62c20be_0
+  - tensorboard=2.2.1=pyh532a8cf_0
+  - tensorboard-plugin-wit=1.6.0=py_0
+  - tensorflow=2.2.0=gpu_py37h1a511ff_0
+  - tensorflow-base=2.2.0=gpu_py37h8a81be8_0
+  - tensorflow-estimator=2.2.0=pyh208ff02_0
+  - tensorflow-gpu=2.2.0=h0d30ee6_0
+  - terminado=0.8.3=py37_0
+  - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hbc83047_0
   - toml=0.10.1=pyh9f0ad1d_0
   - tornado=6.0.4=py37h8f50634_1
+  - traitlets=5.0.4=py_0
   - typed-ast=1.4.1=py37h516909a_0
   - typing_extensions=3.7.4.2=py_0
   - wcwidth=0.2.5=pyh9f0ad1d_1
+  - webencodings=0.5.1=py37_1
+  - werkzeug=1.0.1=py_0
   - wheel=0.35.1=py_0
+  - wrapt=1.12.1=py37h7b6447c_1
   - xz=5.2.5=h7b6447c_0
+  - zeromq=4.3.2=he6710b0_3
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h6597ccf_2
@@ -87,30 +169,28 @@ dependencies:
     - aiohttp==3.6.2
     - async-timeout==3.0.1
     - cachelib==0.1
-    - chardet==3.0.4
     - cssselect==1.1.0
     - deprecated==1.2.10
     - dill==0.3.2
     - future==0.18.2
     - googleapis-common-protos==1.52.0
     - howdoi==2.0.5
-    - idna==2.10
     - keep==2.9
     - lxml==4.5.2
-    - multidict==4.7.6
+    - mpmath==1.1.0
     - promise==2.3
     - protobuf==3.13.0
     - pygithub==1.53
     - pyiqvia==0.3.0
-    - pyjwt==1.7.1
     - pyquery==1.4.1
-    - requests==2.24.0
+    - symfit==0.5.3
+    - sympy==1.6.2
     - tensorflow-datasets==3.2.1
     - tensorflow-metadata==0.23.0
     - termcolor==1.1.0
     - terminaltables==3.1.0
+    - toposort==1.5
     - tqdm==4.48.2
     - urllib3==1.25.10
-    - wrapt==1.12.1
     - yarl==1.5.1
 prefix: /home/abhmul/anaconda3/envs/projects
