--- a/environment.yml
+++ b/environment.yml
@@ -19,9 +19,9 @@ dependencies:
   - blinker=1.4=py37_0
   - brotlipy=0.7.0=py37h7b6447c_1000
   - c-ares=1.16.1=h7b6447c_0
-  - ca-certificates=2020.10.14=0
+  - ca-certificates=2020.6.20=hecda079_0
   - cachetools=4.1.1=py_0
-  - certifi=2020.6.20=py37_0
+  - certifi=2020.6.20=py37he5f6b98_2
   - cffi=1.14.3=py37he30daa8_0
   - chardet=3.0.4=py37_1003
   - click=7.1.2=pyh9f0ad1d_0
@@ -93,7 +93,7 @@ dependencies:
   - numpy=1.19.1=py37h7ea13bd_2
   - oauthlib=3.1.0=py_0
   - olefile=0.46=py_0
-  - openssl=1.1.1h=h7b6447c_0
+  - openssl=1.1.1h=h516909a_0
   - opt_einsum=3.1.0=py_0
   - packaging=20.4=py_0
   - pandas=1.1.1=py37h3340039_0
@@ -119,6 +119,7 @@ dependencies:
   - pyjwt=1.7.1=py37_0
   - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.5=py_0
+  - pyperclip=1.8.0=pyh9f0ad1d_0
   - pyrsistent=0.17.3=py37h7b6447c_0
   - pysocks=1.7.1=py37_1
   - python=3.7.9=h7579374_0
