--- a/pyprojects/dockerfile
+++ b/pyprojects/dockerfile
@@ -12,7 +12,7 @@ ARG USER_GID=$USER_UID
 # include your requirements in the image itself. It is suggested that you only do this if your
 # requirements rarely (if ever) change.
 COPY requirements.txt /tmp/pip-tmp/
-COPY ../.bash_aliases /tmp/bash/
+# COPY ../.bash_aliases /tmp/bash/
 
 # Configure apt and install packages
 RUN apt-get update \
