--- a/pyprojects/environment.yml
+++ b/pyprojects/environment.yml
@@ -10,8 +10,8 @@ dependencies:
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.1=py_0
   - black=20.8b1=py_0
-  - ca-certificates=2020.7.22=0
-  - certifi=2020.6.20=py37_0
+  - ca-certificates=2020.12.5=ha878542_0
+  - certifi=2020.12.5=py37h89c1867_1
   - click=7.1.2=pyh9f0ad1d_0
   - coconut=1.4.3=py37hc8dfbb8_1
   - cycler=0.10.0=py_2
@@ -57,6 +57,7 @@ dependencies:
   - pyflakes=2.2.0=pyh9f0ad1d_0
   - pygments=2.6.1=py_0
   - pyparsing=2.4.5=py_0
+  - pyperclip=1.8.1=pyhd3deb0d_0
   - python=3.7.9=h7579374_0
   - python-dateutil=2.8.1=py_0
   - python_abi=3.7=1_cp37m
@@ -113,4 +114,4 @@ dependencies:
     - urllib3==1.25.10
     - wrapt==1.12.1
     - yarl==1.5.1
-prefix: /home/abhmul/anaconda3/envs/pyprojects
+prefix: /home/abhijeet/anaconda3/envs/pyprojects
