--- a/pyprojects/environment.yml
+++ b/pyprojects/environment.yml
@@ -7,20 +7,40 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - appdirs=1.4.3=py_1
   - attrs=20.1.0=pyh9f0ad1d_0
+  - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.1=py_0
   - black=20.8b1=py_0
+  - bleach=3.3.0=pyh44b312d_0
+  - brotlipy=0.7.0=py37hb5d75c8_1001
   - ca-certificates=2020.12.5=ha878542_0
   - certifi=2020.12.5=py37h89c1867_1
+  - cffi=1.14.5=py37h261ae71_0
   - click=7.1.2=pyh9f0ad1d_0
   - coconut=1.4.3=py37hc8dfbb8_1
+  - cryptography=2.9.2=py37hb09aad4_0
   - cycler=0.10.0=py_2
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
   - flake8=3.8.3=py_1
   - freetype=2.10.2=he06d7ca_0
+  - idna=2.10=pyh9f0ad1d_0
   - importlib-metadata=1.7.0=py37hc8dfbb8_0
+  - importlib_metadata=1.7.0=hd8ed1ab_1
+  - ipykernel=5.5.0=py37h888b3d9_1
+  - ipython=7.20.0=py37h888b3d9_2
+  - ipython_genutils=0.2.0=py_1
   - jedi=0.17.2=py37hc8dfbb8_0
+  - jinja2=2.11.3=pyh44b312d_0
   - joblib=0.16.0=py_0
   - jpeg=9d=h516909a_0
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=3.2.0=py_2
+  - jupyter_client=6.1.11=pyhd8ed1ab_1
+  - jupyter_core=4.7.1=py37h89c1867_0
+  - jupyterlab=2.2.9=pyhd8ed1ab_0
+  - jupyterlab_server=1.2.0=py_0
   - kiwisolver=1.2.0=py37h99015e2_0
   - lcms2=2.11=hbd6801e_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
@@ -33,53 +53,77 @@ dependencies:
   - liblapack=3.8.0=17_openblas
   - libopenblas=0.3.10=pthreads_hb3c22a3_4
   - libpng=1.6.37=hed695b0_2
+  - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=hc7e4089_6
   - libwebp-base=1.1.0=h516909a_3
   - lz4-c=1.9.2=he1b5a44_3
+  - markupsafe=1.1.1=py37hb5d75c8_2
   - matplotlib=3.3.1=1
   - matplotlib-base=3.3.1=py37hd478181_1
   - mccabe=0.6.1=py_1
+  - mistune=0.8.4=py37h4abf009_1002
   - mypy_extensions=0.4.3=py37hc8dfbb8_1
+  - nbconvert=5.6.1=py37hc8dfbb8_1
+  - nbformat=5.1.2=pyhd8ed1ab_1
   - ncurses=6.2=he6710b0_1
+  - notebook=5.7.10=py37hc8dfbb8_0
   - numpy=1.19.1=py37h7ea13bd_2
   - olefile=0.46=py_0
   - openssl=1.1.1g=h516909a_1
+  - packaging=20.9=pyh44b312d_0
   - pandas=1.1.1=py37h3340039_0
+  - pandoc=2.11.4=h7f98852_0
+  - pandocfilters=1.4.2=py_1
   - parso=0.7.1=pyh9f0ad1d_0
   - pathspec=0.8.0=pyh9f0ad1d_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
   - pillow=7.2.0=py37h718be6c_1
   - pip=20.2.2=py37_0
   - plotly=4.9.0=py_0
+  - prometheus_client=0.9.0=pyhd3deb0d_0
   - prompt-toolkit=3.0.7=py_0
   - prompt_toolkit=3.0.7=0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
   - pycodestyle=2.6.0=pyh9f0ad1d_0
+  - pycparser=2.20=pyh9f0ad1d_2
   - pyflakes=2.2.0=pyh9f0ad1d_0
   - pygments=2.6.1=py_0
+  - pyopenssl=19.1.0=py37_0
   - pyparsing=2.4.5=py_0
   - pyperclip=1.8.1=pyhd3deb0d_0
+  - pyrsistent=0.17.3=py37h4abf009_1
+  - pysocks=1.7.1=py37h89c1867_3
   - python=3.7.9=h7579374_0
   - python-dateutil=2.8.1=py_0
   - python_abi=3.7=1_cp37m
   - pytz=2020.1=pyh9f0ad1d_0
+  - pyzmq=19.0.2=py37hac76be4_2
   - readline=8.0=h7b6447c_0
   - regex=2020.7.14=py37h8f50634_0
   - retrying=1.3.3=py37_2
   - rope=0.17.0=pyh9f0ad1d_0
   - scikit-learn=0.23.2=py37h6785257_0
   - scipy=1.5.2=py37hb14ef9d_0
+  - send2trash=1.5.0=py_0
   - setuptools=49.6.0=py37_0
   - six=1.15.0=pyh9f0ad1d_0
   - sqlite=3.33.0=h62c20be_0
+  - terminado=0.9.2=py37h89c1867_0
+  - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.10=hbc83047_0
   - toml=0.10.1=pyh9f0ad1d_0
   - tornado=6.0.4=py37h8f50634_1
+  - traitlets=5.0.5=py_0
   - typed-ast=1.4.1=py37h516909a_0
   - typing_extensions=3.7.4.2=py_0
   - wcwidth=0.2.5=pyh9f0ad1d_1
+  - webencodings=0.5.1=py_1
   - wheel=0.35.1=py_0
   - xz=5.2.5=h7b6447c_0
+  - zeromq=4.3.3=he6710b0_3
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h6597ccf_2
@@ -95,7 +139,6 @@ dependencies:
     - future==0.18.2
     - googleapis-common-protos==1.52.0
     - howdoi==2.0.5
-    - idna==2.10
     - keep==2.9
     - lxml==4.5.2
     - multidict==4.7.6
